--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.js"
+                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
