--- a/config.json
+++ b/config.json
@@ -1,26 +1,10 @@
 {
   "modules": [
     {
-      "name": "documents",
-      "url": "git@github.com:Humanitec/midgard-documents.git",
+      "name": "freyja-ui",
+      "url": "git@github.com:Humanitec/freyja-ui.git",
       "commitId": "123sad12",
-      "config": {
-        "parentExitPointComponent": {
-          "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
-          "elementId": "tabs",
-          "componentSelector": "mat-tab",
-          "options" : {
-            "label": "Documents",
-            "routerOutlet": "documents"
-          }
-        },
-        "entryPointComponent": "",
-        "routingModuleOptions": {
-          "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-          "parentComponent": "WorkflowLevel2DetailComponent",
-          "childrenArrayIndex": "1"
-        }
-      }
+      "config": null
     },
     {
       "name": "products",
