--- a/config.json
+++ b/config.json
@@ -1,19 +1,41 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Parag App",
+    "appTitle": "Aziz App",
     "modules": [
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
+          "url": "git@github.com:Humanitec/dashboards_client_angular.git",
+          "name": "dashboards",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "dashboard",
+                "label": "Dashboards",
+                "route": "dashboards"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
+            }
+          }
+        },
+        {
+            "url": "git@github.com:Humanitec/products_client_angular.git",
             "name": "products",
             "config": {
                 "entryPointComponent": "",
                 "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
+                    "path": "src/midgard/midgard-routing.module.ts",
                     "parentComponent": "MidgardComponent",
                     "childrenArrayIndex": "0"
                 },
                 "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
+                    "path": "midgard/components/nav-bar/nav-bar.component.html",
                     "options": {
                         "icon": "local_offer",
                         "label": "Products",
@@ -25,25 +47,70 @@
             }
         },
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
-            "name": "documents",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "WorkflowLevel2DetailComponent",
-                    "childrenArrayIndex": "1"
-                },
-                "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
-                    "options": {
-                        "label": "Documents",
-                        "routerOutlet": "documents"
-                    },
-                    "elementId": "tabs",
-                    "componentSelector": "mat-tab"
-                }
+          "url": "git@github.com:Humanitec/documents_client_angular.git",
+          "name": "documents",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "class",
+                "label": "Documents",
+                "route": "documents"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
             }
+          }
+        },
+        {
+          "url": "git@github.com:Humanitec/dashboards_client_angular.git",
+          "name": "dashboards",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "dashboard",
+                "label": "Dashboards",
+                "route": "dashboards"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
+            }
+          }
+        },
+        {
+          "url": "git@github.com:Humanitec/blueprint_client_angular.git",
+          "name": "client",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "dashboard",
+                "label": "Blueprint",
+                "route": "clients"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
+            }
+          }
         }
     ]
 }
