--- a/config.json
+++ b/config.json
@@ -1,29 +1,7 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Aziz App",
+    "appTitle": "docktorrr app",
     "modules": [
-        {
-          "url": "git@github.com:Humanitec/dashboards_client_angular.git",
-          "name": "dashboards",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "dashboard",
-                "label": "Dashboards",
-                "route": "dashboards"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
-        },
         {
             "url": "git@github.com:Humanitec/products_client_angular.git",
             "name": "products",
@@ -45,72 +23,6 @@
                     "componentSelector": "mg-navbar-elem"
                 }
             }
-        },
-        {
-          "url": "git@github.com:Humanitec/documents_client_angular.git",
-          "name": "documents",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "class",
-                "label": "Documents",
-                "route": "documents"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
-        },
-        {
-          "url": "git@github.com:Humanitec/dashboards_client_angular.git",
-          "name": "dashboards",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "dashboard",
-                "label": "Dashboards",
-                "route": "dashboards"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
-        },
-        {
-          "url": "git@github.com:Humanitec/blueprint_client_angular.git",
-          "name": "blueprint-client",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "rounded_corner",
-                "label": "Blueprint",
-                "route": "blueprint-client"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
         }
     ]
 }
