--- a/config.json
+++ b/config.json
@@ -1,49 +1,5 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "www",
-    "modules": [
-        {
-            "url": "https://github.com/glind/documents-client-angular.git",
-            "name": "documents",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "WorkflowLevel2DetailComponent",
-                    "childrenArrayIndex": "1"
-                },
-                "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
-                    "options": {
-                        "label": "Documents",
-                        "routerOutlet": "documents"
-                    },
-                    "elementId": "tabs",
-                    "componentSelector": "mat-tab"
-                }
-            }
-        },
-        {
-            "url": "git@github.com:Humanitec/products_client_angular.git",
-            "name": "products",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "src/midgard/midgard-routing.module.ts",
-                    "parentComponent": "MidgardComponent",
-                    "childrenArrayIndex": "0"
-                },
-                "parentExitPointComponent": {
-                    "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-                    "options": {
-                        "icon": "local_offer",
-                        "label": "Products",
-                        "route": "products"
-                    },
-                    "elementId": "navbar",
-                    "componentSelector": "mg-navbar-elem"
-                }
-            }
-        }
-    ]
+    "appTitle": "testing oms",
+    "modules": []
 }
