--- a/config.json
+++ b/config.json
@@ -1,5 +1,28 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "testing oms",
-    "modules": []
+    "appTitle": "Niko App",
+    "modules": [
+        {
+            "url": "git@github.com:Humanitec/products_client_angular.git",
+            "name": "products",
+            "config": {
+                "entryPointComponent": "",
+                "routingModuleOptions": {
+                    "path": "src/midgard/midgard-routing.module.ts",
+                    "parentComponent": "MidgardComponent",
+                    "childrenArrayIndex": "0"
+                },
+                "parentExitPointComponent": {
+                    "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+                    "options": {
+                        "icon": "local_offer",
+                        "label": "Products",
+                        "route": "products"
+                    },
+                    "elementId": "navbar",
+                    "componentSelector": "mg-navbar-elem"
+                }
+            }
+        }
+    ]
 }
