--- a/config.json
+++ b/config.json
@@ -1,23 +1,23 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Remove module before deploy?",
+    "appTitle": "Parag App",
     "modules": [
         {
-            "url": "git@github.com:Humanitec/blueprint_client_angular.git",
-            "name": "blueprint-client",
+            "url": "https://github.com/paraghumanitec/products_client_angular.git",
+            "name": "products",
             "config": {
                 "entryPointComponent": "",
                 "routingModuleOptions": {
-                    "path": "src/midgard/midgard-routing.module.ts",
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
                     "parentComponent": "MidgardComponent",
                     "childrenArrayIndex": "0"
                 },
                 "parentExitPointComponent": {
-                    "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
                     "options": {
-                        "icon": "rounded_corner",
-                        "label": "Blueprint",
-                        "route": "blueprint-client"
+                        "icon": "local_offer",
+                        "label": "Products",
+                        "route": "products"
                     },
                     "elementId": "navbar",
                     "componentSelector": "mg-navbar-elem"
