--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Aziz App",
+    "appTitle": "Midgard",
     "modules": [
         {
-          "url": "git@github.com:Humanitec/dashboards_client_angular.git",
+          "url": "https://github.com:Humanitec/dashboards_client_angular.git",
           "name": "dashboards",
           "config": {
             "entryPointComponent": "",
@@ -25,7 +25,7 @@
           }
         },
         {
-            "url": "git@github.com:Humanitec/products_client_angular.git",
+            "url": "https://github.com:Humanitec/products_client_angular.git",
             "name": "products",
             "config": {
                 "entryPointComponent": "",
@@ -47,7 +47,7 @@
             }
         },
         {
-          "url": "git@github.com:Humanitec/documents_client_angular.git",
+          "url": "https://github.com:Humanitec/documents_client_angular.git",
           "name": "documents",
           "config": {
             "entryPointComponent": "",
@@ -62,50 +62,6 @@
                 "icon": "class",
                 "label": "Documents",
                 "route": "documents"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
-        },
-        {
-          "url": "git@github.com:Humanitec/dashboards_client_angular.git",
-          "name": "dashboards",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "dashboard",
-                "label": "Dashboards",
-                "route": "dashboards"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
-        },
-        {
-          "url": "git@github.com:Humanitec/blueprint_client_angular.git",
-          "name": "blueprint-client",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "rounded_corner",
-                "label": "Blueprint",
-                "route": "blueprint-client"
               },
               "elementId": "navbar",
               "componentSelector": "mg-navbar-elem"
