--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,7 @@ pipeline:
       status: [success]
 
   test:
-    image: registry.tola.io/humanitec/docker-nodejs-and-chrome:0.0.1-8.12.0-latest
+    image: registry.walhall.io/humanitec/docker-nodejs-and-chrome:0.0.1-8.12.0-latest
     commands:
       - npm rebuild node-sass
       - npm run test
